--- a/vain-backend/package.json
+++ b/vain-backend/package.json
@@ -1,27 +1,21 @@
 {
   "name": "vain-backend",
   "version": "1.0.0",
-  "description": "Backend for vain project",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "nodemon index.js"
+    "test": "nodemon App.js"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "express-validator": "^6.13.0",
-    "fs": "0.0.1-security",
-    "moment": "^2.29.1",
-    "passport": "^0.5.0",
-    "passport-local": "^1.0.0",
-    "pg": "^8.7.1",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.6.5"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.14"
+    "dotenv": "^16.0.0",
+    "express": "^4.18.1",
+    "nodemon": "^2.0.16",
+    "pg": "^8.7.3",
+    "swagger-jsdoc": "^6.2.1",
+    "swagger-ui-express": "^4.3.0"
   }
 }
