--- a/vain-backend/package.json
+++ b/vain-backend/package.json
@@ -17,6 +17,7 @@
     "nodemon": "^2.0.16",
     "pg": "^8.7.3",
     "swagger-jsdoc": "^6.2.1",
-    "swagger-ui-express": "^4.3.0"
+    "swagger-ui-express": "^4.3.0",
+    "uuid": "^8.3.2"
   }
 }
