--- a/vain-client/package.json
+++ b/vain-client/package.json
@@ -1,76 +1,48 @@
 {
-  "name": "vain-client",
+  "name": "vain-client-react",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint",
-    "jsonserve": "json-server ../db/books.json",
-    "unittest": "concurrently \"npm run serve\" \"npm run jsonserve\""
-  },
   "dependencies": {
-    "@dafcoe/vue-collapsible-panel": "^0.2.0",
-    "@hennge/vue3-pagination": "^1.0.17",
-    "@popperjs/core": "^2.10.2",
-    "axios": "^0.23.0",
-    "bootstrap": "^5.1.3",
-    "concurrently": "^6.4.0",
-    "core-js": "^3.6.5",
-    "d3": "^7.1.1",
-    "faker": "^5.5.3",
-    "json-server": "^0.17.0",
-    "lodash": "^4.17.21",
-    "password-hash": "^1.2.2",
-    "vue": "^3.0.0",
-    "vue-router": "^4.0.12",
-    "vue3-cookies": "^1.0.6",
-    "vue3-jest": "^27.0.0-alpha.1",
-    "vuetify": "^2.5.14"
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.2.5",
+    "@mui/material": "^5.2.5",
+    "@nivo/bar": "^0.79.1",
+    "@nivo/core": "^0.79.0",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "d3": "^7.3.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "5.0.0",
+    "typeface-fira-sans": "^1.1.13",
+    "uuid": "^8.3.2",
+    "web-vitals": "^2.1.2"
   },
-  "devDependencies": {
-    "@types/lodash": "^4.14.177",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-unit-jest": "^4.5.15",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
-    "@vue/test-utils": "^2.0.0-rc.16",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0",
-    "typescript": "~3.9.3",
-    "vue-jest": "^5.0.0-0"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
     "extends": [
-      "plugin:vue/vue3-essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {},
-    "overrides": [
-      {
-        "files": [
-          "**/__tests__/*.{j,t}s?(x)",
-          "**/tests/unit/**/*.spec.{j,t}s?(x)"
-        ],
-        "env": {
-          "jest": true
-        }
-      }
+      "react-app",
+      "react-app/jest"
     ]
   },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
