--- a/vain-client/package.json
+++ b/vain-client/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.5",
     "@headlessui/tailwindcss": "^0.1.2",
     "@heroicons/react": "^2.0.13",
+    "axios": "^1.2.1",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "next": "13.0.6",
