--- a/vain-backend/package.json
+++ b/vain-backend/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon App.js",
     "test": "nodemon App.js"
   },
   "keywords": [],
