--- a/vain-client/package.json
+++ b/vain-client/package.json
@@ -18,7 +18,8 @@
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "react-paginate": "^8.1.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
